--- a/src/sass/globales/_global.scss
+++ b/src/sass/globales/_global.scss
@@ -9,6 +9,7 @@
     --shadow-Login:0 6px 12px rgba(58, 58, 58, 0.15);
     --diplay-item: block;
     --imgicon-Lateral:url(../../../Assets/iconos-Logo/aaaa-gigapixel-standard\ v2-1x.png);
+    --itemsMenu-ColorPrimary:#FCAF17;
 }
 html {
     scroll-behavior: smooth;
@@ -24,6 +25,7 @@ html {
     list-style: none;
     user-select: none;
     -webkit-tap-highlight-color: transparent;
+    text-decoration: none;
   }
   [class*="__img"] {
     display: block;
@@ -34,9 +36,10 @@ html {
     font-family: var(--primary-font);
     font-size: 1.6rem;
     line-height: 1.6;
-     min-height: 100vh;
+     min-height: 300vh;
      background: var(--background-Color);
      color: white;
      overflow: hidden;
+   
     
   }
