--- a/src/sass/start/_index2.scss
+++ b/src/sass/start/_index2.scss
@@ -1,3 +1,5 @@
 @forward 'sidemenu';
 @forward 'menu-content';
-@forward 'modal-Registro'
+@forward 'modal-Registro';
+@forward 'combos';
+@forward 'inputdate'
