--- a/src/sass/start/_modal-Registro.scss
+++ b/src/sass/start/_modal-Registro.scss
@@ -1,3 +1,4 @@
+@use '../globales/mixins' as m;
 .modal{
     display: none;
     &__content{
@@ -33,23 +34,31 @@
     }
     &__form{
         width: 60%;
-        display: flex;
- 
-       gap: 5rem;
-       padding: 1rem;
+     
+       padding: 2.5rem 3rem 0rem 0;
        color: #071435;
        border-right: .1rem solid #CFD5E6;
-      
+       display: grid;
+       grid-template-columns: repeat(3,1fr);
+       grid-template-rows: repeat(2,1fr);
+       @include m.desktopFullHD {
+        padding: 0.8rem 3rem 0rem 0;
+    }
     }
     &__inputs{
-        width: 60%;
-
+        // width: 60%;
         display: flex;
         flex-direction: column;
-        gap: 2rem;
+        gap: 1rem;
+        grid-column: 1/3;
+        grid-row: 1/2;
+        @include m.desktopFullHD {
+            gap: 0.5rem;
+        }
         
     }
-    &__input{
+    &__input{ 
+    
     
      all: unset;
     display: block;
@@ -58,26 +67,82 @@
     padding: 1rem 0.4rem;
     border-radius: 0.4rem;
     outline: 1px solid #CFD5E6;
-    &--primary{
-        width: 100%;
+    @include m.desktopFullHD {
+        padding: 0.4rem 0.4rem;
     }
+    &--primary{
+        width: 16rem;
+    }
+    
     }
     &__content-primary{
         display: flex;
+        gap: 2rem!important;
+       padding-left: 3rem;
+        
   
     }
+  
     &__content-inputs{
         display: flex;
         flex-direction: column;
-        padding: 0 2rem;
+        padding: 0 3rem;
         gap: 1rem;
+    }
+    &__content-inputs--pd{
+        padding: 0;
+        display: flex;
+       
     }
     &__combos{
         width: auto;
-        // background-color: green;
-    }
-
+        grid-column: 3/4;
+        grid-row: 1/2;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+        @include m.desktopFullHD {
+            gap: 0.5rem;
+        }
   
+        
+     
+    }
+    &__date{
+        grid-column: 1/4;
+        grid-row: 2/3;
+        padding: 2rem 0rem 2rem 3rem;
+       
+    }
+    &__date-content{
+        height: 18rem;    
+        border-radius: 0.6rem;
+        outline: 0.2rem solid #CFD5E6;
+        padding: 1.5rem;
+        display: flex;
+        flex-direction: column;
+        gap: 1rem;
+     
+    }
+    &__date-title{
+        font-weight: 600;
+        color: #071435;
+    }
+    &__paragraph-content{
+        height: 100%;
+       
+        align-content: center;
+        
+    }
+    &__date-paragraph{
+        color: #6B7286;
+        margin-top: -2.5rem;
+        text-align: center;
+        // justify-content: center; 
+    }
+   &__settings{
+    color: black;
+   }
    
 }
 
@@ -117,4 +182,9 @@
        100%{
         transform: translateY(-150%);
        }
+}
+
+//
+.span-name{
+    font-size: 1rem;
 }
