--- a/src/sass/start/_index2.scss
+++ b/src/sass/start/_index2.scss
@@ -2,4 +2,8 @@
 @forward 'menu-content';
 @forward 'modal-Registro';
 @forward 'combos';
-@forward 'inputdate'
+@forward 'inputdate';
+@forward 'modalMovil';
+@forward 'uploadarchive';
+@forward 'modalUpload';
+@forward 'botones';
