--- a/src/sass/start/_modal-Registro.scss
+++ b/src/sass/start/_modal-Registro.scss
@@ -3,60 +3,106 @@
     display: none;
     &__content{
         width: 90%;
-        max-width: 110rem;
-        height: 60rem;
+        max-width: 112rem;
+        height: 58.5rem;
         background-color: white;
-   
         outline: 0.1rem solid #CFD5E6;
-        border-radius: 2rem;
+        border-radius: 0.8rem;
         display: flex;
         flex-direction: column;
-        overflow: hidden;
+        // overflow: hidden;
         z-index: 50;
         animation: endModal .4s forwards;
+        @include m.telefonoFull {
+            
+            height: auto;
+        }
     }
     &__title{
         width: 100%;
-       padding: 2rem 3.2rem;
+       padding: 1.6rem 3.2rem;
        font-size: 2rem;
         color: blue;
+        border-top-left-radius: .8rem;
+        border-top-right-radius: .8rem;
         outline: 0.1rem solid #CFD5E6;
         display: flex;
         justify-content: space-between;
         align-items: center;
+        @include m.desktopFull {
+            
+        }
+        @include m.telefonoFull {
+            padding: 1rem 2rem;
+        }
     }
     &__close{
         cursor: pointer;
     }
+  
     &__body{
         display: flex;
-    
+        width: 100%;
+       height: 100%;
+       gap: 2rem;
+      
+       @include m.telefonoFull {
+            flex-direction: column;
+            gap: 1rem;
+       
+       }
     }
     &__form{
-        width: 60%;
-     
-       padding: 2.5rem 3rem 0rem 0;
+        width: 56%;
+        padding: 3rem 3rem 2rem 3rem;
        color: #071435;
        border-right: .1rem solid #CFD5E6;
-       display: grid;
-       grid-template-columns: repeat(3,1fr);
-       grid-template-rows: repeat(2,1fr);
-       @include m.desktopFullHD {
-        padding: 0.8rem 3rem 0rem 0;
-    }
-    }
+       display: flex;
+       flex-direction: column;
+       gap: 3rem;
+       @include m.telefonoFull {
+        width: 100%;
+        padding: 0 2rem;
+        border: none;
+      
+       }
+
+    }  
+    
     &__inputs{
-        // width: 60%;
-        display: flex;
-        flex-direction: column;
-        gap: 1rem;
-        grid-column: 1/3;
-        grid-row: 1/2;
-        @include m.desktopFullHD {
+     width: 100%;
+    display: grid;
+    grid-template-columns: repeat(3, 30.5%); /* Define tres columnas de igual tamaño */
+    grid-template-areas: 
+      "primary primaryt combop" 
+      "surnames surnames combos" 
+      "inputdate inputdate combot" ;
+     
+      column-gap: 2.5rem;
+      row-gap: 2rem;
+        
+        @include m.desktopFull {
             gap: 0.5rem;
+        
+             
+
         }
+        @include m.telefonoFull {
+           
+            grid-template-columns: repeat(2, 48%); /* Define dos columnas de igual tamaño para móviles */
+            grid-template-areas: 
+              "primary primaryt" 
+              "surnames surnames" 
+              "inputdate combop" 
+              "combos combot";
+            width: 100%;
+            gap: 0.6rem;
+        }
+      
         
     }
+ 
+  
     &__input{ 
     
     
@@ -64,54 +110,47 @@
     display: block;
     display: flex;
     gap: 2rem;
-    padding: 1rem 0.4rem;
+    padding: 0.6rem 2rem;
+  
     border-radius: 0.4rem;
     outline: 1px solid #CFD5E6;
-    @include m.desktopFullHD {
+        
+    @include m.desktopFull {
         padding: 0.4rem 0.4rem;
     }
-    &--primary{
-        width: 16rem;
-    }
-    
-    }
-    &__content-primary{
-        display: flex;
-        gap: 2rem!important;
-       padding-left: 3rem;
-        
-  
+   
+   
     }
   
     &__content-inputs{
         display: flex;
         flex-direction: column;
-        padding: 0 3rem;
-        gap: 1rem;
+        gap: 0.4rem;
+   
     }
-    &__content-inputs--pd{
-        padding: 0;
-        display: flex;
-       
-    }
+ 
     &__combos{
         width: auto;
-        grid-column: 3/4;
-        grid-row: 1/2;
+ 
         display: flex;
         flex-direction: column;
         gap: 1rem;
-        @include m.desktopFullHD {
+        @include m.desktopFull {
             gap: 0.5rem;
+          
         }
-  
+        @include m.telefonoFull {
+            grid-area: combo;
+        }
         
      
     }
     &__date{
-        grid-column: 1/4;
-        grid-row: 2/3;
-        padding: 2rem 0rem 2rem 3rem;
+       
+        height: 20rem;
+        @include m.telefonoFull {
+           
+        }
        
     }
     &__date-content{
@@ -141,8 +180,129 @@
         // justify-content: center; 
     }
    &__settings{
+    padding: 3rem 1.5rem 0rem 0.8rem;
+
+    width: 42%;
+    display: flex;
+    flex-direction: column;
+    gap: 2.5rem;
     color: black;
+    @include m.telefonoFull {
+       
+        width: max-content;
+        gap: 0.5rem;
+        padding: 0 3rem 0 3rem;
+        margin-top: -2rem;
+        width: 100%;
+     
+    }
    }
+
+//    Radios
+   &__radios{
+    width: 100%;
+   display: flex;
+   align-items: center;
+   
+   gap: 5rem;
+ 
+   }
+   &__radios-content{
+    display: flex;
+    flex-direction: column;
+   }
+   &__radio{
+    display: flex;
+    gap: 2rem;
+   }
+// checkboxes
+&__checkboxes{
+    display: flex;
+    align-items: center;
+  
+    gap: 2.2rem;
+
+    
+    input[type="checkbox"] {
+        /* Estilos básicos del checkbox */
+        appearance: none; /* Remueve el estilo predeterminado */
+        width: 20px;
+        height: 20px;
+        background-color: #f0f0f0; /* Fondo cuando no está seleccionado */
+        border: 2px solid #ccc;
+        border-radius: 4px;
+        position: relative;
+        cursor: pointer;
+        transition: background-color 0.3s ease, border-color 0.3s ease;
+
+        &:checked {
+            background-color: #12A6E6; /* Cambia el fondo cuando está marcado */
+            border-color: #12A6E6;
+
+            &::before {
+                content: "\2714"; /* Icono del check (puedes usar SVG o un símbolo Unicode) */
+                position: absolute;
+                top: 50%;
+                left: 50%;
+                transform: translate(-50%, -50%);
+                color: white; /* Color del icono de check */
+                font-size: 16px;
+            }
+        }
+
+        &:hover {
+            // border-color: #12A6E6; /* Cambia el color del borde al pasar el cursor */
+        }
+    }
+}
+&__lblRa{
+    display: flex;
+    gap: 0.6rem;
+   
+}
+&__label-checkbox{
+    display: flex;
+    gap: 1rem;
+    align-items: center;
+}
+// Comboboxes
+&__comboboxes {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr); /* Dos columnas de igual tamaño */
+    grid-template-areas: 
+        'comboA comboB'
+        'comboC comboD'; /* Las filas no deben llevar comas */
+        gap: 1rem;
+        @include m.telefonoFull {
+            display: grid;
+            grid-template-columns:  60%; /* Dos columnas de igual tamaño */
+            grid-template-areas: 
+                'comboA '
+                'comboB'
+                'comboC '
+                'comboD'; /* Las filas no deben llevar comas */
+                gap: 0.2rem;
+        }
+}
+
+&__comboA {
+    grid-area: comboA;
+}
+
+&__comboB {
+    grid-area: comboB;
+}
+
+&__comboC {
+    grid-area: comboC;
+}
+
+&__comboD {
+    grid-area: comboD;
+}
+
+
+
    
 }
 
@@ -157,6 +317,9 @@
     display: flex;
     justify-content: center;
     align-items: center;;
+    @include m.telefonoFull {
+        display: none;
+    }
   
 }
 .modal__content.active{
@@ -186,5 +349,61 @@
 
 //
 .span-name{
-    font-size: 1rem;
+    font-size: 1.5rem;
+    font-weight: 600;
+    color: #071435;
+    padding: 0;
+    margin: 0;
+    text-wrap: nowrap;
+    @include m.desktopFull {
+        font-size: 1rem; 
+    } 
+        
+    
 }
+
+
+// Definición de áreas
+.modal__content-primary {
+    grid-area: primary;
+    padding: 0;
+  
+  }
+  .modal__content-primaryT {
+    grid-area: primaryt;
+    padding: 0;
+  
+  }
+
+  .modal__input--surnames {
+    grid-area: surnames;
+    padding: 0;
+  }
+  
+  .modal__input--date {
+    grid-area: inputdate;
+    padding: 0;
+  }
+  
+  .modal__combo-company {
+    grid-area: combop;
+  }
+  
+  .modal__combo-area {
+    grid-area: combos;
+    @include m.telefonoFull {
+ 
+    }
+  }
+  
+  .modal__combo-regime {
+    grid-area: combot;
+    @include m.telefonoFull {
+ 
+    }
+  }
+  
+  .modal__date {
+    grid-area: date;
+  }
+  
