--- a/src/sass/start/_combos.scss
+++ b/src/sass/start/_combos.scss
@@ -1,15 +1,16 @@
   @use '../globales/mixins' as m;
       .select{
         background-color: #F7FAFB;
-        padding: 10px 20px;
+        padding: 0.7rem 20px;
         color: #6B7286;
-        outline: 2px solid #CFD5E6;
+        outline: 1px solid #CFD5E6;
         font-weight: 500;
+        font-size: 1.4rem;
         border-radius: 8px;
         display: flex;
         align-items: center;
         justify-content: space-between;
-        @include m.desktopFullHD {
+        @include m.desktopFull {
           padding: 0.8rem 0.6rem;
           font-size: 1rem;
       }
@@ -58,5 +59,9 @@
       :is(.modal__combo-company,.modal__combo-area,.modal__combo-regime){
         display: flex;
         flex-direction: column;
-        gap: 1rem;
+        gap: 0.4rem;
+        @include m.desktopFull {
+          gap: 0.6rem;
+        }
       }
+ 
