--- a/src/sass/start/_sidemenu.scss
+++ b/src/sass/start/_sidemenu.scss
@@ -9,9 +9,10 @@
     @include m.telefonoFull {
        
         flex-direction: column;
-    
+        height: auto;
         padding: 0;
         margin: 0;
+    
 
     }
   
@@ -63,6 +64,7 @@
         @include m.telefonoFull {
             width: 100%;
             max-width: 100%;
+           
            margin: 1.8rem 0;
            
        
