--- a/src/sass/app.scss
+++ b/src/sass/app.scss
@@ -1,3 +1,5 @@
 @use 'globales/index';
 @use 'Login/indexL';
-@use 'start/index2'
+@use 'start/index2';
+@use 'modalsResult/index3';
+@use  'company/index4';
