--- a/src/sass/Login/_login.scss
+++ b/src/sass/Login/_login.scss
@@ -44,27 +44,31 @@
         
     }
     &__content{
+        width: 100%;
         display: grid;
         padding-bottom: 2rem;
         position: relative;
+      
        @include m.desktopFull {
         padding-bottom: 1rem;
        }
     }
-    &__input{
+  
+    #password{
         all: unset;
-        height: 4.2rem;
-        outline: 1px solid #CFD5E6;
-        border-radius: 0.5rem;
-        font-family: "Open Sans";
-        padding-left: 4.2rem;
-     
        
+        padding: 0.8rem 0;
+        padding-left: 4.2rem;
+        border-radius: 0.5rem;
+        outline: 1px solid #CFD5E6;
     }
     #password:not(:placeholder-shown) + .login__icon-hidden {
         display: block;
     }
-    &__label{
+    &__labelI{
+        padding: 0;
+        margin-top: 0;
+        margin: 0;
         margin-bottom: 0.8rem;
         font-weight: 600;
     }
@@ -87,9 +91,10 @@
         display: none;
         background-color: white;
         cursor: pointer;
+      
 
         @include m.desktopFull {
-            bottom: calc(100% - 72%);
+            bottom: calc(100% - 75%);
         
         }
     }
@@ -125,3 +130,14 @@
   
 }
 // 
+
+
+#user{
+    all: unset;
+    padding: 0.8rem 0;
+    padding-left: 3.8rem;
+    border-radius: 0.5rem;
+    outline: 1px solid #CFD5E6;
+    border: none;
+}
+
