--- a/src/sass/globales/_global.scss
+++ b/src/sass/globales/_global.scss
@@ -19,7 +19,7 @@ html {
   *,
   *::before,
   *::after {
-    box-sizing: inherit;
+    box-sizing: border-box!important;
     margin: 0;
     padding: 0;
     list-style: none;
