--- a/src/sass/globales/_mixins.scss
+++ b/src/sass/globales/_mixins.scss
@@ -76,3 +76,50 @@
     }
   }
   
+  // boton
+  @mixin btn-style($border-radius: .5rem, $background-color: #0C2B82) {
+    all: unset;
+    outline: .1rem solid $background-color;
+    width: 20rem;
+    padding: 0.9rem 2rem;
+    text-align: center;
+    border-radius: $border-radius; // Border-radius como parámetro
+    cursor: pointer;
+    transition: background-color .4s;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    
+    background-color: $background-color; // Background-color como parámetro
+    color: white;
+  
+    @include telefonoFull {
+      width: auto;   
+      min-width: 10rem;
+    }
+  
+    &:hover {
+      background-color: $background-color;
+      opacity: .9;
+      color: white;
+  
+    }
+  }
+  // input busqueda
+
+  @mixin searchInputStyle($width: 44rem, $background-color: #fff, $border: .7rem) {
+    all: unset;
+    display: block;
+    width: $width;
+    background-color: $background-color;
+    border-radius: $border; // Mantén el border-radius fijo si no necesitas cambiarlo
+    height: 4.3rem; // Mantén el height fijo si no necesitas cambiarlo
+    padding: 0.5rem 2rem 0.5rem 5rem; // Mantén el padding fijo si no necesitas cambiarlo
+    outline: .1rem solid #CFD5E6;
+    cursor: auto;
+    @include telefonoFull {
+        width: 100%;
+        min-width: 8rem;
+    }
+}
