--- a/src/sass/start/_menu-content.scss
+++ b/src/sass/start/_menu-content.scss
@@ -3,14 +3,22 @@
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 2.4rem;
     margin-top: 1.5rem;
     margin-right: 1.5rem;
     margin-bottom: 1.5rem;
     background-color: #F7FAFB;
     border-radius: 1.4rem;
-    padding-bottom:2.8rem;
+    padding-bottom:2.3rem;
     overflow: hidden;
+    @include m.desktopFull {
+        margin: 1.1rem;
+        margin-right: 1.1rem;
+        margin-bottom: 1.1rem;
+        padding-bottom: 1.8rem;
+        gap: 1.5rem;
+       
+    }
     @include m.telefonoFull {
         position: relative;
         margin-top: 0;
@@ -18,6 +26,7 @@
         border-bottom-left-radius: 0;
         border-bottom-right-radius: 0;
         height: calc(100vh - 8.7rem);
+       
     }
    
     &__header{
@@ -30,6 +39,9 @@
         border-bottom: 2px solid #CFD5E6;
         border-top-left-radius: 1.4rem;
         border-top-right-radius: 1.4rem;  
+        @include m.desktopFull {
+            padding: 1.3rem 3.5rem;
+        }
         @include m.telefonoFull {
             flex-direction: column;
             
@@ -107,7 +119,9 @@
     border:  0.2rem solid #CFD5E6;
     overflow-y: scroll;
     overflow-x: hidden;
-
+    @include m.desktopFull {
+       
+    }
 
     @include m.telefonoFull {
        height: 66.5rem;
