--- a/src/sass/globales/_mixins.scss
+++ b/src/sass/globales/_mixins.scss
@@ -61,6 +61,14 @@
       @content;
     }
   }
+
+
+  @mixin desktopMediun {
+    @media (max-width: v.$desktop-mediun) {
+      @content;
+    }
+  }
+  
   
   /* Mixin para escritorios grandes */
   @mixin desktopFull {
