--- a/src/sass/globales/_variables.scss
+++ b/src/sass/globales/_variables.scss
@@ -9,4 +9,5 @@ $tablet-medium-small: 714px; // Medium-small tablets
 $tablet-small: 630px;      // Small tablets
 $phone-large: 520px;       // Phone (large screens)
 $phone-medium: 414px;      // Phone (medium screens)
-$phone: 390px;             // Phone (small screens)
+$phone: 390px;    
+$desktop-mediun:1280px         // Phone (small screens)
