--- a/src/sass/dashboard/_filters.scss
+++ b/src/sass/dashboard/_filters.scss
@@ -7,7 +7,7 @@
     border: 1px solid #CFD5E6;
     background-color: white;
     margin-left: 2rem;
-;
+
     @include m.desktopFull {
         width: 23rem;
         border-radius: 0;
@@ -18,6 +18,18 @@
         scrollbar-color:    #445C9E #0C2B82;
          scrollbar-width:thin; 
     }
+    @include m.desktopMediun {
+        width: 95.5%;
+        height: 63%;
+        max-height: 100%;
+        
+        border-radius: .8rem;
+       
+        overflow: hidden;
+    }
+    @include m.telefonoFull {
+        display: none;
+    }
     &__title{
         padding: 1.8rem;
         color: #0C2B82;
@@ -26,21 +38,54 @@
             padding: 1.2rem 1.8rem;
             font-size: 1.6rem;
         }
+        @include m.desktopMediun {
+            display: flex;
+            justify-content: space-between;
+        }
+    }
+    &__arrow{
+        cursor: pointer;
+       
+    }
+    &__contentAll{
+        // display: flex;
+        width: 100%;
+       
+        @include m.desktopMediun {
+            display: flex;
+        flex-direction: row;
+        gap: 3rem; 
+        }
+       
+        // gap: 1rem;
+        // padding: 0.5rem 1.5rem;
+        // background-color: red;
     }
     &__content{
         display: flex;
         flex-direction: column;
         gap: 1rem;
         padding: 0.5rem 1.5rem;
+        max-height: 0;
+        overflow: hidden;
+        visibility: hidden;
+        transition: max-height 1s ease, visibility 0s 1s;
+        // visibility: hidden;
+     
         @include m.desktopFull {
             gap: unset;
             gap: 0.5rem;
            
             
         }
+        @include m.desktopFull {
+            gap: 1.6rem;
+          
+        }
        
     }
     &__content-items{
+        
         display: flex;
         flex-direction: column;
         gap: 1rem;
@@ -48,5 +93,32 @@
             gap: 0.5rem;
             font-size: 1.3rem;
         }
+        @include m.desktopMediun {
+            width: 100%;
+        }
     }
+}
+
+#filtersHidden{
+    display: none;
+}
+
+#filtersHidden:checked + .filters__content{
+   height: 0;
+    padding: 0;
+    
+    max-height: 0;
+    visibility: hidden;
+}
+
+#filtersHidden:not(:checked) + .filters__content{
+   
+     max-height: 100rem;
+     visibility: visible;
+     transition: max-height 1s ease, visibility 0s;
+ }
+.filters:has(#filtersHidden:checked){
+   
+    height: 6.5rem;
+   
 }
