--- a/src/sass/company/_modalcompany.scss
+++ b/src/sass/company/_modalcompany.scss
@@ -1,5 +1,5 @@
+@use '../globales/mixins' as m;
 .modal-company{
- 
     position: fixed;
     width: 100%;
     height: 100%;
@@ -31,6 +31,7 @@
         justify-content: space-between;
         padding: 1.5rem;
        border-bottom: .1rem solid  #CFD5E6;
+     
     }
     &__form{
           margin-top: auto;
@@ -49,7 +50,7 @@
        outline:  .1rem solid #CFD5E6;
        margin-bottom: 1rem;
        padding-left: 2rem;
-      
+     
     }
  
     &__btn{
