--- a/src/sass/start/_botones.scss
+++ b/src/sass/start/_botones.scss
@@ -7,12 +7,13 @@
     display: flex;
     flex-shrink: 0;
     gap: 2rem;
-   
+    
     @include m.telefonoFull {
         margin-bottom: 0;
       padding: 2rem 0;
     }
     &--carga{
+        margin-top: 2rem;
         padding: 0 2rem;
     }
     &__btn{
